// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Prepare applications for Azure deployment, except cross-cloud migration (use azure-cloud-migrate). Generates or updates azure.yaml, infrastructure (Bicep/Terraform), and Dockerfiles. WHEN: "prepare app for Azure", "build web app and host on Azure", "migrate application to Azure", "configure Azure hosting", "create Azure app", "add Azure service", "modernize app for Azure", "generate azure.yaml", "generate Bicep", "generate Terraform", "create Azure Functions app".",
  "extractedKeywords": [
    "application",
    "applications",
    "azure",
    "azure-cloud-migrate",
    "bicep",
    "build",
    "cli",
    "configure",
    "create",
    "cross-cloud",
    "deploy",
    "deployment",
    "dockerfiles",
    "except",
    "function",
    "functions",
    "generate",
    "generates",
    "host",
    "hosting",
    "identity",
    "infrastructure",
    "migrate",
    "migration",
    "modernize",
    "prepare",
    "security",
    "service",
    "terraform",
    "updates",
    "validation",
    "when",
    "yaml",
  ],
  "name": "azure-prepare",
}
`;

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "application",
  "applications",
  "azure",
  "azure-cloud-migrate",
  "bicep",
  "build",
  "cli",
  "configure",
  "create",
  "cross-cloud",
  "deploy",
  "deployment",
  "dockerfiles",
  "except",
  "function",
  "functions",
  "generate",
  "generates",
  "host",
  "hosting",
  "identity",
  "infrastructure",
  "migrate",
  "migration",
  "modernize",
  "prepare",
  "security",
  "service",
  "terraform",
  "updates",
  "validation",
  "when",
  "yaml",
]
`;
